# Simple_Input_Binder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config_syntax.md  config_syntax.txt  example_binds.txt
examples/basic/: basic.cpp
examples/readfile/: readfile.cpp
sib/: sib.cpp  sib.hpp  sib_maps.hpp  sib_readfile.cpp
